examples/test/testpolicy2179.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2179
  namespace: namespace98
spec:
  podSelector:
    matchLabels:
      key40: value40
      key2: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value48
          key40: value32
      podSelector:
        matchLabels:
          key31: value40
